# DataLens

./: .dockerignore  .editorconfig  .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  compose.yaml  pyproject.toml
.streamlit/: config.toml
config/application/: default.json
config/baseline/: controlled-defects.json
config/data/: usaspending-pbs.json
config/model/: anomaly-v1.json
config/schema/: gsa-pbs-v1.json
data/: README.md
data/manifests/: prepared_pbs_fy2024.json  prepared_pbs_fy2025.json  usaspending_pbs_fy2024.json  usaspending_pbs_fy2025.json
demo/: fy2025_vendors.csv  transactions.csv  vendors.csv
docs/: final-demo.md  model-card.md  retrospective.md
docs/adr/: 0001-use-a-modular-monolith-with-fastapi-as-the-application-boundary.md  0002-evaluate-controlled-defects-over-real-shaped-procurement-data.md  0003-combine-deterministic-rules-anomaly-models-and-a-false-alarm-reranker.md  0004-use-postgresql-and-mlflow-for-shared-state-and-model-governance.md  0005-keep-batch-scoring-synchronous-with-explicit-limits.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/analysis/: deterministic-baseline-results.md  model-comparison-results.md  usaspending-pbs-eda.md
docs/decisions/: configuration-and-reproducibility.md  containerization.md  fastapi-application-boundary.md
docs/planning/: grill-session-2026-06-22.md  internship-roadmap.md  (+1 more)
notebooks/: 01_usaspending_pbs_eda.ipynb  02_model_comparison.ipynb  README.md
scripts/: demo_workflow.py  smoke_stack.py  verify.py
tests/: test_package.py
(+90 files in other folders)
