[project]
name = "datalens"
version = "0.1.0"
description = "Human-in-the-loop data quality analysis for procurement records"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3,<4",
    "mlflow>=3.1,<4",
    "numpy>=2.3.1,<3",
    "pandas>=2.3.0,<3",
    "pyarrow>=20.0.0,<21",
    "requests>=2.32.4,<3",
    "scikit-learn>=1.7.0,<2",
    "seaborn>=0.13.2,<0.14",
]

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "jupyterlab>=4.4.3,<5",
    "nbclient>=0.10.2,<0.11",
    "nbconvert>=7.16.6,<8",
    "nbformat>=5.10.4,<6",
    "pytest>=8.4.1,<9",
    "pytest-cov>=6.2.1,<7",
    "ruff>=0.12.0,<0.13",
    "types-requests>=2.32.4.20250611,<3",
]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers -ra"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["datalens"]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "PT", "SIM", "UP"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E501", "N806"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
